Styled the Highlights section

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ img {
 }
 
 .personal {
-    width: 33%;
+    width: 25%;
 }
 
 .profile section:first-child {
@@ -38,20 +38,64 @@ img {
 
 .profile section:last-child {
     > ul {
-        list-style-type: none;
-        > li:nth-child(1):before {
-            margin: 0px 15px 0px -15px;
+        > li {
+            margin: 10px;
+            text-indent: 20px;
+        }
+        > li::marker {
             font-family: 'FontAwesome';
-            content: '\f0b1';
             color: black;
         }
-        > li:nth-child(2):before {
-            margin: 0px 15px 0px -15px;
-            font-family: 'FontAwesome';
+        > li:nth-child(1)::marker {
             content: '\f0b1';
-            color: black;
+        }
+        > li:nth-child(2)::marker {
+            content: '\f276';
+        }
+        > li:nth-child(3)::marker {
+            content: '\f1fd';
         }
     } 
+}
+
+.highlights {
+    width: 50%;
+    margin: 25px auto;
+    padding: 0px 25px;
+    border: 2px rgba(0,0,0,0.3) groove;
+    background-color: rgba(0, 62, 121, 0.4);
+    box-shadow: 0 3px 3px rgba(0,0,0,0.2);
+
+    .profile-points ul {
+        > li {
+            text-indent: 20px;
+            padding-bottom: 15px;
+        }
+        > li a {
+            text-decoration: none;
+            color: white;
+        }
+        > li a:hover {
+            color: orange;
+        }
+        > li::marker {
+            font-family: 'FontAwesome';
+            color: white;
+        }
+        > li:nth-child(1)::marker {
+            content: '\f183';
+        }
+        > li:nth-child(2)::marker {
+            content: '\f073';
+        }
+        > li:nth-child(3)::marker {
+            content: '\f03e';
+        }
+    }
+}
+
+.interests section h3 ul {
+    background-color: black;
 }
 
 .posts {
@@ -63,14 +107,16 @@ img {
     border: 2px rgba(0,0,0,0.3) groove;
     padding: 25px;
     box-shadow: 0 3px 3px rgba(0,0,0,0.2);
+    background-color: aliceblue;
 }
 
-.profile, .highlights, .interests, .friends {
+.profile, .interests, .friends {
     margin: 25px;
     border: 2px rgba(0,0,0,0.3) groove;
     padding-left: 25px;
     padding-right: 25px;
     box-shadow: 0 3px 3px rgba(0,0,0,0.2);
+    background-color: aliceblue;
 }
 
 /* Top left of nav bar */
